feat: signin popup

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,10 +17,10 @@
 
 @layer components {
   .field {
-    @apply mb-2 border w-36;
+    @apply w-full p-1 mb-2 border rounded;
   }
   .btn {
-    @apply h-8 text-white rounded-md w-36 bg-cyan-900;
+    @apply w-full h-8 text-white rounded-md bg-cyan-900;
   }
   .mask{
     @apply w-full h-full bg-black/50;
