--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,7 +7,7 @@
 @layer base {
   body {
     @apply bg-blue-100;
-    font-family: 'Outfit', sans-serif;
+     /* font-family: 'Outfit', sans-serif; */
   }
   input{
     @apply outline-none;
