--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,7 +40,7 @@
     @apply max-w-[1600px] p-10 mx-auto;
   }
   .select {
-    @apply relative flex h-10 rounded overflow-hidden after:content-['\25BC']
+    @apply relative mr-2 flex h-10 rounded overflow-hidden after:content-['\25BC']
     after:absolute after:top-0 after:right-0 after:p-4 after:bg-[#34495e] after:pointer-events-none;
   }
 }
